2004-06-05  Laurent Sansonetti  <lrz@gnome.org>

	* bin/alexandria:

	Prints the release version upon exceptions.

	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb:

	Added a search field in the toolbar to filter books.  Refactored a bit
	the existing code. 

2004-06-04  Dafydd Harries  <daf@muse.19inch.net>

	* lib/alexandria/ui/main_app.rb:

	Fix a bug where Alexandria would crash when GConf keys hadn't been
	set. Laurent did all the hard work, I just helped with the debugging.

	* data/alexandria/icons/star_set.png
	  data/alexandria/icons/star_unset.png:

	New icons. The old ones looked nasty against darker backgrounds due
	rough edges. The new ones look more or less the same as the old ones.
	They could probably use a little tweaking. They were drawn as SVGs but
	committed as PNGs.

	* data/alexandria/icons/star_ok.png
	  data/alexandria/icons/star_nok.png:

	Deleted.

	* lib/alexandria/ui/main_app.rb
	  lib/alexandria/ui/info_book_dialog.rb:

	Modified to use the new constants for the new icons.

2004-05-29  Laurent Sansonetti  <lrz@gnome.org>

	* README:

	Updated with recent libraries.

	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb:

	Added the possibility to sort icons (via the main or 
	popup menus).

2004-05-27  Laurent Sansonetti  <lrz@gnome.org>

	* README:

	Incremented Ruby/Amazon version (0.8.1 -> 0.8.2).
	
	* data/alexandria/glade/preferences_dialog.glade,
	  lib/alexandria/book.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/preferences_dialog.rb:

	Implemented the preferences backend for the preferences
	dialog box.

2004-05-26  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/icons/book.png:

	Added.

	* lib/alexandria/book.rb:

	Added Book::DEFAULT_RATING.

	* lib/alexandria/ui/icons.rb:

	Added .small_cover and .medium_cover functions.

	* lib/alexandria/ui/info_book_dialog.rb:

	Follow book.rb changes and refresh the book views if the 
	properties has changed.
